# sorte.py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
scripts/: sorte.py
sortepy/: loterica.py  script.py
src/gval/: loteria.py  script.py
src/sortepy/: loterica.py  script.py  types.py  util.py
src/sortepy/v2/: spi.py  types.py
src/sortepy/v2/loterica/: _types.py  handlers.py
test/: test_quina.py
tests/: __init__.py  basetest.py  conftest.py  patchs.py  setup.cfg  test_duplasena.py  test_federal.py  test_lotofacil.py  test_lotomania.py  test_megasena.py  test_quina.py  test_script.py  test_util.py
tests/fixtures/: __init__.py
tests/fixtures/cgi-bin/: obter-loteria.py
tests/fixtures/config/cache/: paginas.db
tests/fixtures/paginas/: pagina_ascii.html  pagina_iso-8859-1.html  pagina_unknown.html  pagina_utf-8.html
tests/fixtures/resultados/: duplasena-1.htm  federal-5235.htm  lotofacil-1.htm  lotomania-1.htm  megasena-1.htm  quina-1.htm  quina-2.htm
tests/v2/: conftest.py
tests/v2/fixtures/: response_federal_5624.json  response_lotofacil_2402.json  response_quina_5734.json
tests/v2/loterica/: test_handlers.py
