[tool.poetry]
name = "sorte.py"
version = "0.1.0.dev1"
description = "Geração e conferência de apostas de loterias"
readme = "README.md"
repository = "https://github.com/wagnerluis1982/sorte-py"
authors = ["Wagner Macedo <wagnerluis1982@gmail.com>"]
license = "GPL-3.0-only"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Portuguese (Brazilian)",
    "Topic :: Other/Nonlisted Topic",
]
include = [
    "LICENSE",
]

[tool.poetry.scripts]
sorte.py = "sortepy.script:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
